# learning

./: cargo-leptos.nix  flake.nix
assembly/: hello.s
assembly/handmade-executables/: compile.py  exit42.dmp
assembly/syscalls/: Makefile  chdir.s  check_args.s  getcwd.s  shutdown.s  write.s
c/: Makefile  classes.c  cmd.c  hello_world_object_file.c  pass_a_struct.c  pointer_to_array.c  print_to_string.c  tagged_unions.c
c/inverse_square_root/: .gitignore  Makefile  inverse_square_root.c  plot.py
c/meson-tutorial/: main.c  meson.build
c/openmp/: compile.sh  helloworld.c  module3.c  module3_serial.c  module4.c  module5.c
c/openmp-again/: 02_hello_world.s  02_hello_world_parallel.c  05_integrate.c  05_integrate_parallel.c  05_threads.c  07_integrate_parallel_critical.c  09_integrate_reduction.c  11_num_procs.c  12_mandel_fixed.c  12_mandel_original.c
c/the-c-programming-language/: 0.0_hello_world.c  1.2_fahrenheit_to_celsius.c  1.5.1_file_copying.c  1.5.4_count_words.c  1.6_arrays.c  README.md  print_chars.c
clojure/: .envrc  README.md  functions.clj  hello.clj
concourse/: hello.yaml
cpp/: auto  auto.cpp  classes.cpp  struct.c  test_shared.cpp
cpp/sharedlib/: .gitignore  Makefile  hello.cpp  test_libhello.cpp
cs50/autocomplete/: .gitignore  app.py
cs50/cs50-rust/: Cargo.toml
cs50/google_frontend/: index.html
cs50/recover/: .gitignore  Makefile  recover.c
cs50/recover-rs/: Cargo.toml
cs50/registerapp/: app.py
css/css-card-tricks/: Card.js  README.md  index.html
elm/guide-commands-and-subscriptions/: .gitignore  package.json
elm/guide-the-elm-architecture/: .gitignore  elm.json  package.json  tsconfig.json  vite.config.ts
gleam/hello/: gleam.toml
go/: 2d_array.go  c2go.c  c2go.go  closure_variable.go  hello.go
grpc/: .gitignore  address.py  tutorial.py
haskell/: db.hs  flake.nix  hello.hs  io.hs  overlapping-intervals.hs  simplify.hs
hy/: filter.hy  hello.hy
js/async_js_traversy/: 01_callbacks.js  02_promises.js  03_multiple_promises.js  04_async_await.js  05_async_await_fetch.js  package.json  playground.js
js/fetch_example/: index.html  response.json  sample.txt
js/login/: .env.template  package.json  server.js
js/message-app/: index.html  main.js  styles.css
js/robotani/: index.html  main.js
js/rockpaperscissors/: app.js  index.html  style.css
kotlin/: .gitignore  enum.kt  flake.nix  functional.kt  functional.kts  hello.kt
kubernetes/: nginx-deployment.yaml
linux-device-drivers/: README.md  hello.c
ml/: .envrc  simple-neural-network.py
ml/huggingface-course/: pyproject.toml
ml/huggingface-course/chapter_01/: 03_transformers.py
ml/huggingface-course/chapter_02/: 02_behind_the_pipeline.py
ml/lunar_landar/: README.md  deep_q_learning.py  lunarlander_play.py  lunarlander_train.py
ml/pytorch-blitz/: blitz.py  pyproject.toml
mojo/: hello.mojo  mojoproject.toml
nickel/: .envrc  hello.ncl
nix/clibraries/: .gitignore  Makefile  README.md  flake.nix
nix/docker/: minimal-busybox.nix
nix/pills/: README.md
notes/: compiler-rtfeldman.md
ocaml/: .envrc  main.ml
opengl/cerno-tut/: Makefile  main
opengl/raycaster/: Makefile  README.md  main.c  shell.nix
purescript/: .envrc
python/: meta.py  protocols.py
python/dino/: script.py
python/learn-ormar/: pyproject.toml
python/learn-ormar/learn_ormar/: models.py
python/learn-ormar/tests/: test_learn_ormar.py
python/learn-pyo3/: Cargo.toml  pyproject.toml  sample.py
python/learn-pyo3/src/: lib.rs
python/misc/: apythonrepl.py  change type of object.py  dependent attributes.py  descriptortest.py  descriptortest2.py  dumb-taxi.py  gtk test.py  gtk3.py  lazy-property-a.py  lazy-property-b.py  max.py  mkltest.py  monty hall.py  mpl.py  numpy speed.py  properties.py  propertytest.py  scipyopexample.py  sizeof.py  test-builtins.py  thierry.py  weakreftest.py  webaapp.py
python/numpy-perf/: random_arrays.py
python/oauth2-fastapi/: dev.py  pyproject.toml
python/oauth2-fastapi/oauth2_fastapi/: __init__.py
python/tf_mnist/: train.py  use.py
r/: .envrc  02_names.r  README.md  hello.r
rasa/: notes.md
roc/: .gitignore  Hello.roc  hello.roc  http.roc  input.txt  io.roc  lexer.roc  playground.roc  tutorial.roc
rust/: .gitignore  Cargo.toml
rust/cookbook/: Cargo.toml
rust/explore/: Cargo.toml
rust/fetch-wiki/: Cargo.toml
rust/guessing-game/: Cargo.toml
rust/learn-actix/: Cargo.toml
rust/learn-nannou/: Cargo.toml
rust/learn-ndarray/: Cargo.toml  bench.py
rust/learn-poem/: Cargo.toml
rust/learn-poem/src/: main.rs
rust/learn-wgpu/: Cargo.toml  build.rs
rust/learn-wgpu/examples/: the_swapchain.rs
rust/learn-wgpu/src/: main.rs  shader.frag  shader.frag.spv
rust/misc/: Cargo.toml
rust/misc/examples/: async.rs  ownership.rs  post_json.rs  serde.rs  weird.rs
rust/ml/: .envrc  Cargo.toml
rust/myshell/: Cargo.toml  README.md  main.rs
rust/python2rust/: Cargo.toml  README.md  example  example.py
rust/rust-by-example/: Cargo.toml  README.md
rust/search/: Cargo.toml  test.txt
rust/tiny-framework/: Cargo.toml  README.md  index.html
rust/tiny-framework/examples/: leptos-reactivity.rs  tiny-reactivity.rs
rust/tiny-framework/src/: lib.rs  main.rs
rust/tiny-redis/: Cargo.toml  README.md
rust/tiny-webserver/: Cargo.toml
rust/tinyshell/: Cargo.toml
rust/trunk-tailwind-websys/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
rust/trunk-tailwind-websys/src/: main.rs
vue/: 00_deps.ts  01_deps_map.ts  02_target_map.ts  03_reflect_proxy.ts  04_active_effect.ts  05_computed.ts  README.md
wasm/wat/: add.wat  (+2 more)
zig/: .gitignore  parser.zig
(+118 files in other folders)
