[tool.poetry]
name = "huggingface-course"
version = "0.1.0"
description = ""
authors = ["Felix Andreas"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = { extras = ["flax"], version = "^4.8.2" }
torch = "^1.9.0"
datasets = "^1.9.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^21.6b0", allow-prereleases = true }
ipython = "^7.25.0"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
