[tool.poetry]
name = "pytorch-playground"
version = "0.1.0"
description = ""
authors = ["Felix Andreas <felix.andreas95@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
