[tool.poetry]
name = "learn-pyo3"
version = "0.1.0"
description = ""
authors = ["Felix Andreas"]

[tool.poetry.dependencies]
python = "^3.8"
maturin = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
