[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Felix Andreas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8.3"
log = "0.4"
futures = "0.3"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
