[package]
name = "misc"
version = "0.1.0"
authors = ["Felix Andreas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.8.1", features = ["full"] }
