[package]
name = "tiny-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
leptos_reactive = { version = "0.6", features = ["nightly"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Event",
    "HtmlElement",
    "Node",
    "Text",
    "console",
] }
