[package]
name = "trunk-tailwind-websys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
